fixing endpoints